# ComfyUI-GarmentDiT

./: GarmentDiT.py  __init__.py  pyproject.toml
src/: attention_garm.py  pipeline_stable_diffusion_3_tryon.py
